feat: alterar configurações para subir projeto no kuberntes no application.properties e realizando alteraçẽoes no pom.xml

--- a/compra-saga-credito/src/main/resources/application.properties
+++ b/compra-saga-credito/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#COMANDOS KUBERNTES PARA SUBIR A APLICAÇÃO - COMPRA SAGA CREDITO
-mvn clean package -Dquarkus.kubernetes.deploy=true
+#COMANDOS KUBERNTES PARA SUBIR A APLICAÇÃO - COMPRA SAGA PEDIDO
+    #mvn clean package -Dquarkus.kubernetes.deploy=true
 
-kubectl get all
-kubectl logs compra-saga-5dd86fcfd7-w7q8q
+    #kubectl get all
+    #kubectl logs compra-saga-5dd86fcfd7-w7q8q
 
 
 ########################################
