refactor: configurar porta da aplicação para 8081 em compra-saga-orquestrador e acrescentando comandos do kubernetes para pesquisas futuras

--- a/compra-saga-credito/src/main/resources/application.properties
+++ b/compra-saga-credito/src/main/resources/application.properties
@@ -2,8 +2,20 @@
     #mvn clean package -Dquarkus.kubernetes.deploy=true
 
     #kubectl get all
+    #kubectl get pod
     #kubectl logs compra-saga-5dd86fcfd7-w7q8q
 
+    #EXPÕE A PORTA DE UM SERVIÇO QUE SUBIU NO SANDBOX
+        #oc expose svc flight-app
+
+    #EXIBE NA TELA AS ROTAS
+        #kubectl get routes
+
+
+########################################
+######### CONFIG PORTA #################
+########################################
+quarkus.http.port=8081
 
 ########################################
 ######### DOCKER HUB ###################
